# AI_Academy_demo

./: README.md  federated_quickstart.ipynb  federated_quickstart.py  pyproject.toml
